- Added stack-based window switching using Ctrl+(Shift)+Tab; this replaces the old "Next Window" and "Previous Window" actions
- Fixed: Graphics device windows would disappear when trying to attach them to the main window with some versions of Qt
- Fixed: tcl/tk widgets would locki up after running commands in the R Console
- Provide a template for bug reports, containing standardized information on the RKWard setup in Help->Report Bug...
- When loading a (local) workspace, change the working directory to the directory of the workspace (configurable)
- Include the sidebar position of tool windows when saving / restoring the workplace layout
- "Pending jobs" tool window is not longer shown in the bottom sidebar by default
- Support removing individual tool windows from the sidebars, completely
- Add an action to interrupt all (current and pending) commands
- Fixed: When saving the workplace while closing the session, the workplace layout would not always be saved correctly
- File browser context menu gains many more KDE standard actions (KDE 4.3 and above, only)
- Auxiliary binaries rkward.bin and rkward.rbackend are no longer installed into /usr[/local]/bin/ on Unix
- Fixed: Object name completion would abort early in the script editor with KDE 4.4
- Support function argument hinting for R primitives
- Support package namespaces in object name completion and workspace browser
- Support S4 slots in object name completion and workspace browser		TODO: more testing
- More correct handling of quotes in object name completion
- Support plot history for ggplot2 plots
- Be less pro-active about fetching structure information on R objects in the workspace		TODO: verify that this fixes our issues with rXML
- Allow to browse arbitrarily deeply nested environments in the object browser

--- Version 0.5.5 - Mar-15-2011
- Fixed: Crash when several environments on the search path have the same name
- Re-organize the default toolbar actions of the main window